# avTranscoder

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.md  Dockerfile  INSTALL.md  README.md  SConstruct  USAGE.md  appveyor.yml
app/: CMakeLists.txt  SConscript  avTranscoder.cpp
app/audioRewrapper/: audioRewrapper.cpp
app/avAudioPhaseMeter/: CMakeLists.txt  avAudioPhaseMeter.cpp
app/avInfo/: CMakeLists.txt  avInfo.cpp
app/avMeta/: CMakeLists.txt  avMeta.cpp
app/avPlay/: AvReader.cpp  AvReader.hpp  CMakeLists.txt  Window.cpp  Window.hpp  avplay.man  avplayer.man  main.cpp
app/avPlayer/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
app/avProcessor/: CMakeLists.txt  avProcessor.cpp  avprocessor.man
app/avThumbnail/: CMakeLists.txt  avThumbnail.cpp
app/avTranscoder/: CMakeLists.txt  avTranscoder.cpp
app/avplay/: AvReader.hpp  CMakeLists.txt  Reader.hpp  Window.cpp  Window.hpp  main.cpp
app/cpp/: SConscript
app/cpp/avInfo/: CMakeLists.txt  avinfo.man
app/cpp/avMeta/: CMakeLists.txt  avMeta.cpp  avmeta.man
app/cpp/avTranscoder/: CMakeLists.txt  av++.man  avTranscoder.cpp
app/cpp/avplay/: AvReader.hpp  CMakeLists.txt  Reader.hpp  Window.cpp  Window.hpp  avplayer.man
app/cpp/genericProcessor/: CMakeLists.txt  genericProcessor.cpp
app/cpp/optionChecker/: CMakeLists.txt
app/cpp/presetChecker/: CMakeLists.txt  presetChecker.cpp
app/customEncoder/: CMakeLists.txt  customEncoder.cpp
app/genericProcessor/: CMakeLists.txt  avprocessor.man  genericProcessor.cpp
app/jFileAnalysis/: jFileAnalysis.java
app/jTranscoder/: jTranscoder.java
app/java/: SConscript
app/java/jTranscoder/: jTest.java  jTranscoder.java
app/mediaChecker/: CMakeLists.txt  mediaChecker.cpp  mediachecker.man
app/mediaInfo/: CMakeLists.txt  mediaInfo.cpp  mediainfo.man
app/mediaMeta/: CMakeLists.txt  mediaMeta.cpp  mediameta.man
app/mediaPlayer/: CMakeLists.txt  MediaReader.hpp  mediaPlayer.cpp  mediaplayer.man
app/mediaProcessor/: CMakeLists.txt  mediaProcessor.cpp  mediaprocessor.man
app/mediaProcessorJava/: mediaProcessorJava.java
app/mediaProcessorPython/: mediaProcessorPython.py
app/optionChecker/: CMakeLists.txt  optionChecker.cpp
app/presetChecker/: CMakeLists.txt  avprofiles.man  presetChecker.cpp
app/pyConcat/: CMakeLists.txt  pyconcat.py
app/pyProcessor/: CMakeLists.txt  pyProcessor.py  pyprocessor.py
app/pyRewrap/: CMakeLists.txt  pyrewrap.py
app/pyThumbnail/: CMakeLists.txt  pythumbnail.py
app/python/: SConscript
app/python/pyProcessor/: pyProcessor.py
src/: CMakeLists.txt  SConscript
src/AvTranscoder/: AudioTransform.cpp  AudioTransform.hpp  AvInputStream.cpp  AvInputStream.hpp  AvOutputStream.cpp  AvOutputStream.hpp  ColorTransform.cpp  ColorTransform.hpp  Description.cpp  Description.hpp  DummyInputStream.cpp  DummyInputStream.hpp  InputFile.cpp  InputFile.hpp  InputStream.cpp  InputStream.hpp  InputStreamAudio.cpp  InputStreamAudio.hpp  InputStreamData.cpp  InputStreamData.hpp  InputStreamReader.hpp  InputStreamVideo.cpp  InputStreamVideo.hpp  JsonWriter.hpp  Library.cpp  Library.hpp  Media.cpp  Media.hpp  Option.cpp  Option.hpp  OptionLoader.cpp  OptionLoader.hpp  OutputFile.cpp  OutputFile.hpp  OutputStream.cpp  OutputStream.hpp  OutputStreamAudio.cpp  OutputStreamAudio.hpp  OutputStreamVideo.cpp  OutputStreamVideo.hpp  (+28 more)
src/AvTranscoder/CodedStream/: AvInputStream.cpp  AvInputStream.hpp  AvOutputStream.cpp  AvOutputStream.hpp  IInputStream.hpp  InputStream.hpp  OutputStream.hpp
src/AvTranscoder/CodedStructures/: AudioDesc.cpp  AudioDesc.hpp  CodedDesc.cpp  CodedDesc.hpp  DataDesc.cpp  DataStream.hpp  DataStreamDesc.hpp  VideoDesc.cpp  VideoDesc.hpp
src/AvTranscoder/DatasStructures/: AudioDesc.cpp  AudioDesc.hpp  AudioFrame.hpp  DataStreamDesc.hpp  EssenceDesc.cpp  EssenceDesc.hpp  Frame.hpp  Image.hpp  Pixel.cpp  Pixel.hpp  Stream.hpp  VideoDesc.cpp  VideoDesc.hpp  VideoStream.cpp  VideoStream.hpp
src/AvTranscoder/EssenceStream/: DummyAudio.cpp  DummyAudio.hpp  DummyVideo.cpp  DummyVideo.hpp  InputAudio.cpp  InputAudio.hpp  InputEssence.hpp  InputVideo.cpp  InputVideo.hpp  OutputAudio.cpp  OutputAudio.hpp  OutputEssence.hpp  OutputVideo.cpp  OutputVideo.hpp
src/AvTranscoder/EssenceStructures/: AudioFrame.hpp  Frame.hpp  Pixel.cpp  Pixel.hpp  VideoFrame.hpp
src/AvTranscoder/EssenceTransform/: AudioEssenceTransform.cpp  AudioEssenceTransform.hpp  AudioTransform.cpp  AudioTransform.hpp  ColorTransform.cpp  ColorTransform.hpp  EssenceTransform.hpp  VideoEssenceTransform.cpp  VideoEssenceTransform.hpp
src/AvTranscoder/File/: InputFile.cpp  InputFile.hpp  OutputFile.cpp  OutputFile.hpp
src/AvTranscoder/Metadatas/: AttachementStreamProperties.hpp  AudioStreamProperties.hpp  DataStreamProperties.hpp  MediaMetadatasStructures.cpp  MediaMetadatasStructures.hpp  Print.hpp  SubtitleStreamProperties.hpp  UnknownStreamProperties.hpp  VideoStreamProperties.hpp
src/AvTranscoder/Options/: OpionRatio.cpp  OpionRatio.hpp  Option2D.cpp  Option2D.hpp  OptionBoolean.cpp  OptionBoolean.hpp  OptionChoice.cpp  OptionChoice.hpp  OptionDouble.cpp  OptionDouble.hpp  OptionGroup.cpp  OptionGroup.hpp  OptionInt.cpp  OptionInt.hpp  OptionString.cpp  OptionString.hpp
src/AvTranscoder/Profiles/: Avi.hpp  DNxHD.hpp  Mkv.hpp  Wave.hpp  XdCamHd422.hpp
src/AvTranscoder/Transcoder/: StreamTranscoder.cpp  StreamTranscoder.hpp  Transcoder.cpp  Transcoder.hpp
src/AvTranscoder/codec/: AudioCodec.cpp  AudioCodec.hpp  DataCodec.cpp  DataCodec.hpp  ICodec.cpp  ICodec.hpp  VideoCodec.cpp  VideoCodec.hpp  codec.i
src/AvTranscoder/codedStream/: AvInputStream.cpp  AvInputStream.hpp  AvOutputStream.cpp  (+5 more)
src/avTranscoder/: InputStreamAudio.hpp  InputStreamVideo.hpp  Media.hpp  avTranscoder.i
src/avtranscoder/: Profile.cpp  avtranscoder.i  common.cpp
src/mediaCore/: CMakeLists.txt  Library.cpp  Library.hpp  common.cpp  common.hpp  mediaCore.i  util.cpp  util.hpp
src/mediaIO/: CMakeLists.txt  mediaIO.i
src/mediaTransform/: AudioTransform.cpp  AudioTransform.hpp  CMakeLists.txt  ITransform.hpp  VideoTransform.cpp  VideoTransform.hpp  mediaTransform.i
(+469 files in other folders)
