# C++ apps
add_subdirectory(avAudioPhaseMeter)
add_subdirectory(avInfo)
add_subdirectory(avMeta)
add_subdirectory(avPlayer)
add_subdirectory(avProcessor)
add_subdirectory(customEncoder)

# Python apps
add_subdirectory(pyProcessor)
add_subdirectory(pyThumbnail)
add_subdirectory(pyRewrap)
add_subdirectory(pyConcat)
